[gd_scene format=3 uid="uid://c5savldmnu01"]

[ext_resource type="Script" path="res://scenes/menus/save_load_menu.gd" id="1_script"]

[node name="SaveLoadMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.08, 0.1, 0.14, 1.0)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 24.0
offset_right = -40.0
offset_bottom = -24.0
theme_override_constants/separation = 16

[node name="TopBar" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBox/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 26
text = "Load Game"

[node name="CloseButton" type="Button" parent="VBox/TopBar"]
layout_mode = 2
custom_minimum_size = Vector2(40, 0)
text = "âœ•"

[node name="ScrollContainer" type="ScrollContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="SlotList" type="VBoxContainer" parent="VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12
